# ptracehook

./: .gitignore  AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md
examples/instrument_no_original/: README.md  main.rs
examples/instrument_with_original/: README.md  main.rs  target.c
src/: api.rs  error.rs  lib.rs
tests/: integration_examples.rs
