[package]
name = "ptracehook"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Out-of-process ptrace-based hook framework scaffold"
license = "MIT"
repository = "https://github.com/YinMo19/ptracehook"

[dependencies]
libc = "0.2"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
iced-x86 = { version = "1", default-features = false, features = ["decoder", "std"] }
