[package]
name = "ptracehook"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
description = "Out-of-process ptrace hook framework for Linux (x86_64 runtime, aarch64 backend in progress)"
license = "MIT"
repository = "https://github.com/YinMo19/ptracehook"
homepage = "https://github.com/YinMo19"
documentation = "https://docs.rs/ptracehook"

[dependencies]
libc = "0.2"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
iced-x86 = { version = "1", default-features = false, features = ["decoder", "std"] }
